# SuperConductor

./: BLOCKCHAIN_INFO.md  CHANGELOG.md  PHAM_BLOCKCHAIN_LOG.md  README.md  README_EN.md  SIGNATURE.sha256  pyproject.toml
docs/: PHYSICS_PROXY_LIMITATIONS.md  PHYSICS_PROXY_LIMITATIONS_EN.md  QUENCH_LAYER_MODEL.md  QUENCH_LAYER_MODEL_EN.md  VERSIONING_POLICY.md  VERSIONING_POLICY_EN.md
examples/: material_compare_payload.json  sample_payload.json
scripts/: cleanup_generated.py  generate_signature.py  release_check.py  verify_package_identity.py  verify_signature.py
superconducting_magnet_stack/: __init__.py  ac_loss.py  ac_loss_decomposition.py  application_presets.py  cli.py  coil_geometry.py  contracts.py  critical_state.py  electromagnetic.py  engine_ref_adapter.py  fault_tolerance.py  field_uniformity.py  joint_resistance.py  material.py  material_database.py  material_ranking.py  material_screening.py  mechanical_fatigue.py  multiphysics_engine.py  observer.py  pinning.py  pipeline.py  protection_system.py  quench_dynamics.py  quench_propagation.py  ramp_dynamics.py  ramp_profile.py  safety.py  sensitivity_analysis.py  splice_matrix.py  splice_topology.py  strain_effects.py  thermal.py  uncertainty_quantification.py
tests/: test_physics_foundation.py  test_superconducting_magnet_stack.py
