[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "superconducting-magnet-stack"
version = "0.9.0"
description = "Superconducting magnet design and readiness evaluation stack"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
sc-magnet-assess = "superconducting_magnet_stack.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
